[package]
name = "skani-lib-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]

name = "ani"
path = "src/main.rs"


[dependencies]
skani = "0.1.0"
clap = "4.0.15"
rayon = "1.5.1"

[profile.dev]
opt-level = 3
